--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Amanda Duva Portfolio</title>
 </head>
@@ -19,7 +20,7 @@
                     <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="contact-me">Contact Me</a>
+                    <a href="#contact-me">Contact Me</a>
                 </li>
             </ul>
         </div>
@@ -29,11 +30,38 @@
       <h2>Web Developer</h2>
     </section>
 
-    <section></section>
+    <section>
+      <div class="container">
+        <h2 class="label" id="about-me">About Me</h2>
+        <p class="am-info">Hello, my name is Amanda Duva and I am a web developer. I graduated from University of Central Florida with a Bachelor of Science in English Language Arts Education. I started off my professional life as a high school teacher. After three years as an educator, I attended a coding bootcamp through UCF to earn a certificate and to become the web devloper that I am today!</p>
+      </div>
+    </section>
 
-    <section></section>
+    <section>
+      <div class="container">
+        <h2 class="label" id="work">Work</h2>
+        <p>
+          <!-- <h3>HTML and CSS</h3> -->
+          <a href="https://amandajduva.github.io/horiseon-01-challenge/">
+            <img src="./assets/images/horiseon-crop.png" id="img1" alt="screenshot of deployed web apllication with blue navigation bar and photo of people around a table at work.">
+          </a>
+        </p> 
+        <img src="./assets/images/placeholder-img-1.jpeg" class="placeholder-images">
+        <img src="./assets/images/placeholder-img-2.jpeg" class="placeholder-images">
+        <img src="./assets/images/placeholder-img-3.png" class="placeholder-images">
+        <img src="./assets/images/placeholder-img-4.jpeg" class="placeholder-images">
+      </div>
+    </section>
 
-    <section></section>
+    <section>
+      <div class="container">
+        <h2 class="label" id="contact-me">Contact Me</h2>
+        <p class="email">Email</p>
+          <li class="email">amanda.j.duva@gmail.com</li>
+        <a href="https://www.linkedin.com/in/amanda-duva-8aa15314a/">LinkedIn</a>
+        <a href="https://github.com/amandajduva">GitHub</a>
+      </div>
+    </section>
 
     <footer>🩷 See You Later 🩷</footer>
 </body>
