--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
       <div class="container">
         <h2 class="label" id="work">Work</h2>
         <p>
-          <!-- <h3>HTML and CSS</h3> -->
           <a href="https://amandajduva.github.io/horiseon-01-challenge/">
             <img src="./assets/images/horiseon-crop.png" id="img1" alt="screenshot of deployed web apllication with blue navigation bar and photo of people around a table at work.">
+            <!-- <div class="bottom-left">HTML and CSS</div> -->
           </a>
         </p> 
-        <img src="./assets/images/placeholder-img-1.jpeg" class="placeholder-images">
-        <img src="./assets/images/placeholder-img-2.jpeg" class="placeholder-images">
-        <img src="./assets/images/placeholder-img-3.png" class="placeholder-images">
-        <img src="./assets/images/placeholder-img-4.jpeg" class="placeholder-images">
+        <img src="./assets/images/placeholder-img-1.jpeg" class="placeholder-images" alt="placeholder image">
+        <img src="./assets/images/placeholder-img-2.jpeg" class="placeholder-images" alt="placeholder image">
+        <img src="./assets/images/placeholder-img-3.png" class="placeholder-images" alt="placeholder image">
+        <img src="./assets/images/placeholder-img-4.jpeg" class="placeholder-images" alt="placeholder image">
       </div>
     </section>
 
@@ -57,7 +57,7 @@
       <div class="container">
         <h2 class="label" id="contact-me">Contact Me</h2>
         <p class="email">Email</p>
-          <li class="email">amanda.j.duva@gmail.com</li>
+          <li id="hidden">amanda.j.duva@gmail.com</li>
         <a href="https://www.linkedin.com/in/amanda-duva-8aa15314a/">LinkedIn</a>
         <a href="https://github.com/amandajduva">GitHub</a>
       </div>
