fixed flex boxes and added to README

--- a/index.html
+++ b/index.html
@@ -2,68 +2,87 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Amanda Duva Portfolio</title>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <title>Amanda Duva Portfolio</title>
 </head>
 
 <body>
-    <header>
-        <h1>Amanda Duva</h1>
-        <div>
-            <ul>
-                <li>
-                    <a href="#about-me">About Me</a>
-                </li>
-                <li>
-                    <a href="#work">Work</a>
-                </li>
-                <li>
-                    <a href="#contact-me">Contact Me</a>
-                </li>
-            </ul>
-        </div>
-    </header>
+  <header>
+    <h1>Amanda Duva</h1>
+    <div>
+      <ul>
+        <li>
+          <a href="#about-me">About Me</a>
+        </li>
+        <li>
+          <a href="#work">Work</a>
+        </li>
+        <li>
+          <a href="#contact-me">Contact Me</a>
+        </li>
+      </ul>
+    </div>
+  </header>
 
-    <section id="photo">
-      <h2>Web Developer</h2>
-    </section>
+  <section id="photo">
+    <h2>Web Developer</h2>
+  </section>
 
-    <section>
-      <div class="container">
-        <h2 class="label" id="about-me">About Me</h2>
-        <p class="am-info">Hello, my name is Amanda Duva and I am a web developer. I graduated from University of Central Florida with a Bachelor of Science in English Language Arts Education. I started off my professional life as a high school teacher. After three years as an educator, I attended a coding bootcamp through UCF to earn a certificate and to become the web devloper that I am today!</p>
+  <main>
+    <section class="container">
+      <h2 id="about-me">About Me</h2>
+      <div>
+        <p class="am-info">Hello, my name is Amanda Duva and I am a web developer. I graduated from University of
+          Central Florida with a Bachelor of Science in English Language Arts Education. I started off my professional
+          life as a high school teacher. After three years as an educator, I attended a coding bootcamp through UCF to
+          earn a certificate and to become the web devloper that I am today!</p>
       </div>
     </section>
 
-    <section>
-      <div class="container">
-        <h2 class="label" id="work">Work</h2>
-        <p>
-          <a href="https://amandajduva.github.io/horiseon-01-challenge/">
-            <img src="./assets/images/horiseon-crop.png" id="img1" alt="screenshot of deployed web apllication with blue navigation bar and photo of people around a table at work.">
-            <!-- <div class="bottom-left">HTML and CSS</div> -->
-          </a>
-        </p> 
-        <img src="./assets/images/placeholder-img-1.jpeg" class="placeholder-images" alt="placeholder image">
-        <img src="./assets/images/placeholder-img-2.jpeg" class="placeholder-images" alt="placeholder image">
-        <img src="./assets/images/placeholder-img-3.png" class="placeholder-images" alt="placeholder image">
-        <img src="./assets/images/placeholder-img-4.jpeg" class="placeholder-images" alt="placeholder image">
+    <section class="container">
+      <h2 id="work">Work</h2>
+      <div class="work-container">
+        <a class="project horiseon" href="https://amandajduva.github.io/horiseon-01-challenge/" aria-label="">
+          <div>
+            <h3>Horiseon</h3>
+          </div>
+        </a>
+        <a class="project project-2" href="">
+          <div>
+            <h3>Project 2</h3>
+          </div>
+        </a>
+        <a class="project project-3" href="">
+          <div>
+            <h3>Project 3</h3>
+          </div>
+        </a>
+        <a class="project project-4" href="">
+          <div>
+            <h3>Project 4</h3>
+          </div>
+        </a>
+        <a class="project project-5" href="">
+          <div>
+            <h3>Project 5</h3>
+          </div>
+        </a>
       </div>
     </section>
 
-    <section>
-      <div class="container">
-        <h2 class="label" id="contact-me">Contact Me</h2>
-        <p class="email">Email</p>
-          <li id="hidden">amanda.j.duva@gmail.com</li>
+    <section class="container">
+      <h2 id="contact-me">Contact Me</h2>
+      <div id="contact">
+        <p id="email">Email: amanda.j.duva@gmail.com</p>
         <a href="https://www.linkedin.com/in/amanda-duva-8aa15314a/">LinkedIn</a>
         <a href="https://github.com/amandajduva">GitHub</a>
       </div>
     </section>
+  </main>
 
-    <footer>🩷 See You Later 🩷</footer>
+  <footer>🩷 See You Later 🩷</footer>
 </body>
 
 </html>
