--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="container">
       <h2 id="work">Work</h2>
       <div class="work-container">
-        <a class="project horiseon" href="https://amandajduva.github.io/horiseon-01-challenge/" aria-label="">
+        <a class="project horiseon" href="https://amandajduva.github.io/horiseon-01-challenge/">
           <div>
             <h3>Horiseon</h3>
           </div>
