updated app to include project 1

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <section class="container">
       <h2 id="work">Work</h2>
       <div class="work-container">
-        <a class="project horiseon" href="https://amandajduva.github.io/horiseon-01-challenge/">
+        <a class="project arewethereyet" href="https://treesaretall.github.io/arewethereyet/">
           <div>
-            <h3>Horiseon</h3>
+            <h3>Are We There Yet?</h3>
           </div>
         </a>
         <a class="project project-2" href="">
