updated with project 2

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <h3>Are We There Yet?</h3>
           </div>
         </a>
-        <a class="project project-2" href="">
+        <a class="project minigames" href="https://mini-games-5df9d3c11dc2.herokuapp.com/">
           <div>
-            <h3>Project 2</h3>
+            <h3>Minigames</h3>
           </div>
         </a>
         <a class="project project-3" href="">
